[gd_scene load_steps=5 format=3 uid="uid://dvoj7ynkb5115"]

[ext_resource type="Script" path="res://src/hud/player_gold_emerald_display.gd" id="1_v3f80"]
[ext_resource type="Theme" uid="uid://byoo2gb70drio" path="res://assets/themes/interactable.tres" id="2_dgx7k"]
[ext_resource type="Texture2D" uid="uid://bu03b6pa34u7a" path="res://assets/art/icons/gold.tres" id="3_nppa6"]
[ext_resource type="Texture2D" uid="uid://dnxy0ov5k2c7q" path="res://assets/art/icons/emerald.tres" id="4_djald"]

[node name="PlayerGoldEmeraldDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(80, 74)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -38.0
offset_right = 39.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_v3f80")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_dgx7k")

[node name="GoldHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/GoldHbox"]
layout_mode = 2
texture = ExtResource("3_nppa6")
expand_mode = 3
stretch_mode = 4

[node name="GoldDisplay" type="Label" parent="MarginContainer/VBoxContainer/GoldHbox"]
layout_mode = 2
text = "123"

[node name="EmeraldHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmeraldIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/EmeraldHbox"]
layout_mode = 2
texture = ExtResource("4_djald")
expand_mode = 3
stretch_mode = 4

[node name="EmeraldDisplay" type="Label" parent="MarginContainer/VBoxContainer/EmeraldHbox"]
layout_mode = 2
text = "123"
